# ds_data_manager

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: docker_build.yml  python_app.yml  python_ci.yml
core/: download.py  resource_classes.py  resources.py
scripts/: cleanup.sh  download_from_gcs.sh  setup.sh
src/: config.py
src/sample/: resources.py
tests/: test_download.py  test_resources.py
