[tool.poetry]
name = "ds-framework"
version = "0.1.0"
description = ""
authors = ["Yudai Hayashi <yudai@wantedly.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ds_framework"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
