[tool.poetry]
name = "ds-framework"
version = "0.1.0"
description = ""
authors = ["Yudai Hayashi <yudai@wantedly.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}, {include = "core"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
